New flowchart and anchor nav styles

--- a/web/themes/custom/leap/sass/style.scss
+++ b/web/themes/custom/leap/sass/style.scss
@@ -26,6 +26,7 @@
 @import "components/resource";
 @import "components/reports";
 @import "components/table";
+@import "components/flowchart";
 
 /* Printer-friendly styles - START
 *********************************/
