--- a/web/themes/custom/leap/sass/_nav.scss
+++ b/web/themes/custom/leap/sass/_nav.scss
@@ -1,3 +1,5 @@
+// Navigtaion menus
+nav.menu-inline,
 #block-leappublicmenu,
 #block-leapusermenu{
   display: flex;
@@ -19,7 +21,7 @@
 
 
     @media (min-width: em(550)) {
-      padding: 0px 160px 0 0;
+      padding: 0 0 0 0;
       columns: 0;
       display: inline-flex;
       flex-direction: row;
@@ -52,17 +54,30 @@
         @media (min-width: em(1024)) {
           margin: 0 20px;
         }
+      }
+    }
+  }
+}
 
+
+// Treat last main nav item as user dropdown.
+#block-leappublicmenu,
+#block-leapusermenu{
+  .menu {
+    @media (min-width: em(550)) {
+      padding: 0px 160px 0 0;
+    }
+    li {
+      a {
         &.is-active{
           border-bottom: 1px solid;
 
           @media (min-width: em(800)) {
             border-bottom: 2px solid;
           }
-        }
+        }        
       }
     }
-
     li:last-child {
       display: block;
       position: absolute;
