--- a/web/themes/custom/leap/sass/components/_video.scss
+++ b/web/themes/custom/leap/sass/components/_video.scss
@@ -269,6 +269,7 @@ div.video-background, .video-container-featured, .video-container-page {
   
 }
 
+.video-grid,
 #block-views-block-video-grid-block-1, #block-views-block-video-grid-block-2{
   > div > div{
     display: flex;
