Added video download link and styles

--- a/web/themes/custom/leap/templates/node--video--teaser.html.twig
+++ b/web/themes/custom/leap/templates/node--video--teaser.html.twig
@@ -110,10 +110,8 @@
       <div class="video-title">
         <h2>{{ label }}</h2>
       </div>
-      {{ content.body }} 
-      <div class="detail-link">
-      	{{ content.links }}
-      </div>
+      {{ content.body }}
+      {{ downloadlink }}
     </div>
 
     
