--- a/web/themes/custom/leap/templates/node--video.html.twig
+++ b/web/themes/custom/leap/templates/node--video.html.twig
@@ -95,6 +95,7 @@
     
     <div class="video-info">
       {{ content.body }} 
+      {{ downloadlink }}
     </div>
     <span class="play-button" id="play-button">Play</span>
     <div class="video-player">
