--- a/web/themes/custom/leap/css/style.css
+++ b/web/themes/custom/leap/css/style.css
@@ -1267,6 +1267,20 @@ div.video-background .action-link a {
 .video-carousel .slick-dots .slick-active button {
   background-color: #d0872a; }
 
+.link-download {
+  white-space: nowrap;
+  line-height: 1.1875em;
+  font-style: normal;
+  color: #515668;
+  font-size: 10px;
+  font-weight: 800;
+  text-transform: uppercase;
+  padding-right: 18px;
+  background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='43.329px' height='43.329px' viewBox='0 0 43.329 43.329' style='enable-background:new 0 0 43.329 43.329;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpath d='M18.689,30.359c1.645,1.639,4.305,1.639,5.951,0l14.082-14.014c0.91-0.906,1.186-2.287,0.695-3.474 s-1.646-1.976-2.932-1.976h-5.879V3.196C30.606,1.445,29.17,0,27.419,0H15.908C14.156,0,12.7,1.444,12.7,3.196v7.698H6.842 c-1.284,0-2.441,0.79-2.931,1.976c-0.49,1.187-0.216,2.561,0.694,3.466L18.689,30.359z'/%3E%3Cpath d='M42.657,37.547c0-1.75-1.419-3.171-3.172-3.171H3.842c-1.751,0-3.171,1.419-3.171,3.171v2.611 c0,1.751,1.42,3.171,3.171,3.171h35.645c1.751,0,3.171-1.42,3.171-3.171L42.657,37.547L42.657,37.547z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-size: 12px 12px; }
+
 .video-carousel {
   margin-bottom: 100px; }
 
@@ -1994,9 +2008,6 @@ nav.menu-inline,
     #block-leappublicmenu .menu li:last-child ul li:last-child:before,
     #block-leapusermenu .menu li:last-child ul li:last-child:before {
       content: none; }
-
-nav.menu-inline > .menu > li > a {
-  font-size: 14px; }
 
 .old-ie *, .lt-ie9 * {
   font-weight: normal !important; }
