--- a/web/themes/custom/leap/sass/_nav.scss
+++ b/web/themes/custom/leap/sass/_nav.scss
@@ -160,6 +160,6 @@ nav.menu-inline,
 }
 
 
-nav.menu-inline > .menu > li > a {
-  font-size: 14px;
-}
+// nav.menu-inline > .menu > li > a {
+//   font-size: 14px;
+// }
