--- a/web/themes/custom/leap/sass/_blocks.scss
+++ b/web/themes/custom/leap/sass/_blocks.scss
@@ -352,7 +352,7 @@
 .block-custom,
 #block-views-block-grouped-resources-block-1,
 #block-views-block-grouped-resources-block-2 {
-  margin-bottom: 30px;
+  //margin-bottom: 30px;
 
   ul {
     list-style-type: disc;
@@ -376,5 +376,17 @@
   }
   strong {
     font-weight: 500;   
+  }
+  a {
+    color: $darkOrange;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.main-content {
+  .block:last-of-type {
+    margin-bottom: 100px;
   }
 }
