FI logo accessibility tweak

--- a/web/themes/custom/leap/templates/layout/page.html.twig
+++ b/web/themes/custom/leap/templates/layout/page.html.twig
@@ -12,7 +12,7 @@
   {% if page.utility_nav %}
     <nav id="menu-utility" class="clearfix" role="navigation">
       <div class="container">
-        <a href="https://www.fi.edu" class="logo-large" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
+        <a href="https://www.fi.edu" class="logo-large" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}" aria-label="{{ 'The Franklin Institute logo'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
         {{ page.utility_nav }}
       </div>
     </nav>
@@ -30,7 +30,7 @@
 
 <div id="page">
   <div id="mobile-nav">
-      <a href="https://www.fi.edu" class="logo-small" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
+      <a href="https://www.fi.edu" class="logo-small" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}" aria-label="{{ 'The Franklin Institute logo'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
     <ul class="nav-control">
       <li><a href="https://www.fi.edu/interactive-map" class="map-btn" title="Open Map">Map</a></li>
       <li><a href="javascript:;" class="menu-btn" title="Open Menu">Menu</a></li>
