Added link for Spanish versions of resource files

--- a/web/themes/custom/leap/templates/node--resource--featured.html.twig
+++ b/web/themes/custom/leap/templates/node--resource--featured.html.twig
@@ -109,6 +109,7 @@
         {{ content.body }}
       </div>
       <span class="action-link big"><a href={{ content.field_file[0] }} download>Download</a></span>
+      <span class="action-link big"><a href={{ content.field_file2[0] }} download>descargar en espanol</a></span>
     </div>
   </div>
 
