--- a/web/themes/custom/leap/templates/node--resource--featured.html.twig
+++ b/web/themes/custom/leap/templates/node--resource--featured.html.twig
@@ -109,7 +109,9 @@
         {{ content.body }}
       </div>
       <span class="action-link big"><a href={{ content.field_file[0] }} download>Download</a></span>
-      <span class="action-link big"><a href={{ content.field_file2[0] }} download>descargar en espanol</a></span>
+      {% if content.field_file2 %}
+        <span class="action-link big"><a href={{ content.field_file2[0] }} download>descargar en espanol</a></span>
+      {% endif %}
     </div>
   </div>
 
