--- a/web/themes/custom/leap/templates/node--resource--teaser.html.twig
+++ b/web/themes/custom/leap/templates/node--resource--teaser.html.twig
@@ -109,7 +109,7 @@
         {{ content.body }}
       </div>
       <span class="file"><a href={{ content.field_file[0] }} download>Download</a></span>
-      {% if content.field_file2 %}
+      {% if content.field_file2[0] %}
         span class="file"><a href={{ content.field_file2[0] }} download>descargar en espanol</a></span>
       {% endif %}
     </div>
