--- a/web/themes/custom/leap/css/style.css
+++ b/web/themes/custom/leap/css/style.css
@@ -35,7 +35,8 @@
     letter-spacing: 0.1875em;
     padding: 15px 20px;
     text-transform: uppercase;
-    transition: font-weight 0.1s ease-out; }
+    transition: font-weight 0.1s ease-out;
+    margin-bottom: 5px; }
     .action-link a:hover {
       color: #fff !important;
       background-color: #515668;
