--- a/web/themes/custom/leap/sass/_utilities.scss
+++ b/web/themes/custom/leap/sass/_utilities.scss
@@ -17,6 +17,7 @@
     padding: 15px 20px;
     text-transform: uppercase;
     transition: font-weight 0.1s ease-out;
+    margin-bottom: 5px;
 
     &:hover {
       color: #fff !important;
