--- a/web/themes/custom/leap/css/style.css
+++ b/web/themes/custom/leap/css/style.css
@@ -31,7 +31,7 @@
     background-color: #515668;
     font-family: "Gotham SSm 4r", "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    font-size: 10px;
+    font-size: 12px;
     letter-spacing: 0.1875em;
     padding: 15px 20px;
     text-transform: uppercase;
@@ -39,9 +39,7 @@
     margin-bottom: 5px; }
     .action-link a:hover {
       color: #fff !important;
-      background-color: #515668;
-      font-size: 10px;
-      font-weight: 800; }
+      background-color: #676e85; }
     .action-link a:visited {
       color: #e4e8e7; }
   .action-link.big a {
@@ -1334,45 +1332,29 @@ div.video-background .action-link a {
   content: '';
   display: table;
   clear: both; }
-.basic-page .intro-paragraph h1 {
-  display: inline-block;
+.basic-page .intro-paragraph h2 {
+  display: block;
   font-size: 2.625em;
   color: #4d5263; }
-  @media (min-width: 48em) {
-    .basic-page .intro-paragraph h1 {
-      width: calc(33% - 15px);
-      float: left; } }
 .basic-page .intro-paragraph .intro-body {
   font-size: 1em;
   line-height: 1.8;
   font-weight: 400;
   font-style: normal;
   margin: 0 0 25px 0; }
-  @media (min-width: 48em) {
-    .basic-page .intro-paragraph .intro-body {
-      width: calc(66% - 15px);
-      float: right; } }
 .basic-page .basic-page-block {
   margin-bottom: 20px; }
   .basic-page .basic-page-block:after {
     content: '';
     display: table;
     clear: both; }
-  .basic-page .basic-page-block .field-title {
-    border-bottom: 1px solid #707d7a;
+  .basic-page .basic-page-block .field-title h3 {
+    color: #4d5263;
+    display: block;
+    font-size: 1.5em;
     margin-bottom: 20px; }
-    .basic-page .basic-page-block .field-title h4 {
-      color: #4d5263;
-      display: block;
-      font-size: 1.5em;
-      font-weight: 500;
-      margin-bottom: 20px; }
   .basic-page .basic-page-block .field-body {
     text-align: left; }
-    @media (min-width: 48em) {
-      .basic-page .basic-page-block .field-body {
-        width: calc(66% - 15px);
-        float: right; } }
 .basic-page ul {
   margin-bottom: 40px; }
   .basic-page ul li {
