--- a/web/themes/custom/leap/sass/components/_basic-page.scss
+++ b/web/themes/custom/leap/sass/components/_basic-page.scss
@@ -11,15 +11,16 @@
 			clear: both;
 		}
 
-		h1 {
-			display: inline-block;
+		h2 {
+			//display: inline-block;
+			display: block;
 			font-size: em(42);
 			color: $purple;
 
-			@media (min-width: em(768)) {
-				width: calc(33% - 15px);
-				float: left;
-			}
+			// @media (min-width: em(768)) {
+			// 	width: calc(33% - 15px);
+			// 	float: left;
+			// }
 		}
 		.intro-body {
 			font-size: em(16);
@@ -28,10 +29,10 @@
 		    font-style: normal;
 		    margin: 0 0 25px 0;
 
-			@media (min-width: em(768)) {
-				width: calc(66% - 15px);
-				float: right;
-			}
+			// @media (min-width: em(768)) {
+			// 	width: calc(66% - 15px);
+			// 	float: right;
+			// }
 		}
 	}
 	.basic-page-block {
@@ -43,14 +44,14 @@
 		}
 		
 		.field-title {
-			border-bottom: 1px solid $gray;
-			margin-bottom: 20px;
+			//border-bottom: 1px solid $gray;
+			//margin-bottom: 20px;
 
-			h4 {
+			h3 {
 				color: $purple;
 				display: block;
 				font-size: em(24);
-				font-weight: 500;
+				//font-weight: 500;
 				margin-bottom: 20px;
 			}
 		}
@@ -58,10 +59,10 @@
 		.field-body {
 			text-align: left;
 
-			@media (min-width: em(768)) {
-				width: calc(66% - 15px);
-				float: right;
-			}
+			// @media (min-width: em(768)) {
+			// 	width: calc(66% - 15px);
+			// 	float: right;
+			// }
 		}
 	}
 	ul {
