--- a/web/themes/custom/leap/sass/_header.scss
+++ b/web/themes/custom/leap/sass/_header.scss
@@ -20,7 +20,7 @@ body.mobile #page {
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.85);
 }
 #page {
-	background-color: #fff;
+	background: #fff;
 	min-height: 100%;
 	@media (min-width: em(320)) {
 		position: relative;
@@ -58,6 +58,18 @@ body.mobile #page {
 		display: inline-block;
 	}
 }
+
+/* Utility Nav blocks - Section
+*********************************/
+.utility-wrapper {
+	@media (min-width: em(1024)) {
+		display: flex; /* or inline-flex */
+		justify-content: space-between;
+	}
+}
+
+
+
 /* Mobile Nav - Section
 *********************************/
 #mobile-nav {
@@ -69,14 +81,16 @@ body.mobile #page {
 			width: 95px;
 			height: 106px;
 			left: 24px;
+			z-index: 300;
 		}
 		.nav-control {
-			width: 45%;
+			//width: 45%;
 			float: right;
 			padding-left: 1px;
 			overflow: hidden;
 			li {
-				width: 50%;
+				//width: 50%;
+				min-width: 60px;
 				line-height: em(51);
 				float: left;
 				display: block;
@@ -88,7 +102,7 @@ body.mobile #page {
 					background-color: #414553;
 				}
 				a {
-					background: url("../images/sprites/ui/ui-icon-sprites-mobile.png") no-repeat;
+					background: rgba(0, 0, 0, 0) url("../images/sprites/ui/ui-icon-sprites-mobile.png") no-repeat;
 					text-indent: -9000px;
 					display: block;
 					&.map-btn {
@@ -96,6 +110,18 @@ body.mobile #page {
 					}
 					&.menu-btn {
 						background-position: 50% -64px;
+					}
+					&.buy-tickets {
+						background-image: none;
+						text-indent: 0px;
+						background-color: $orange;
+						color: $black;
+						// Small button, with space around.
+						//display: initial;
+						//padding: 5px;
+						//margin-right: 15px;
+						padding-left: 10px;
+						padding-right: 10px;
 					}
 				}
 			}
@@ -176,7 +202,7 @@ body.mobile #page {
 a.logo-small,
 a.logo-large{
 	z-index: 200;
-	background: url('../images/logo/logo-tfi.png') no-repeat 0 50%;
+	background: rgba(0, 0, 0, 0) url('../images/logo/logo-tfi.png') no-repeat 0 50%;
 	background-size: 100%;
 	text-indent: -9000px;
 	position: absolute;
@@ -199,16 +225,15 @@ a.logo-large {
 		height: 127px;
 	}
 }
-#block-utilitynavigation,
-#block-menu-menu-header-utility-menu {
-	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
-		float: right;
-		margin-right: -2px;
-	}
-	@media (min-width: em(1152)) { /* Changed to fix issue with tablets, original value 1024 */
-		margin-right: 0;
-	}
-}
+// #block-menu-menu-header-utility-menu {
+// 	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
+// 		float: right;
+// 		margin-right: -2px;
+// 	}
+// 	@media (min-width: em(1152)) { /* Changed to fix issue with tablets, original value 1024 */
+// 		margin-right: 0;
+// 	}
+// }
 #menu-utility {
 	@media (min-width: em(320)) {
 		@include order(2);
@@ -221,6 +246,14 @@ a.logo-large {
 	}
 	.container {
 		position: relative;
+	}
+	.block:first-of-type {
+		@media (min-width: em(1024)) { 
+			margin-left: 90px;
+		}
+		@media (min-width: em(1152)) { 
+			margin-left: 120px;
+		}		
 	}
 	ul.menu {
 		height: auto;
@@ -252,6 +285,7 @@ a.logo-large {
 		@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
 			margin-top: -2px;
 			width: auto;
+			padding-left: 10px;
 			li {
 				float: left;
 				display: inline-block;
@@ -259,9 +293,13 @@ a.logo-large {
 			}
 			li a {
 				color: $darkGray;
-				padding: 0 7px;
+				padding: 0 15px;
 				display: inline-block;
 				border-bottom: 0;
+				&.donate-link,
+				&.donate-link:hover {
+					color: #cc0000;
+				}
 				&:hover {
 					color: $darkGray;
 					background-color: #f9f9f9;
@@ -276,7 +314,7 @@ a.logo-large {
 		}
 		@media (min-width: em(1152)) { /* Changed to fix issue with tablets, original value 1024 */
 			li a {
-				padding: 0 14px;
+				padding: 0 15px;
 				color: $darkGray;
 				font-size: em(10);
 			}
@@ -286,13 +324,15 @@ a.logo-large {
 .utility-social-links{
 	padding-left: 30px;
 	padding-right: 30px;
-	padding-top: 15px;
+	//padding-top: 15px;
+	padding-bottom: 40px;
 	@media (min-width: em(1024)) { 
-		margin-left: 70px;
+		//margin-left: 70px;
 		padding-top: 10px;
+		padding-bottom: 0px;
 	}
 	@media (min-width: em(1152)) { 
-		margin-left: 100px;
+		padding-left: 0px;
 	}
 	.social-icon {
 		float: left;
@@ -313,8 +353,8 @@ a.logo-large {
 	}
 	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
 		display: inline-block;
-		background-color: $orange;
-		color: $black;
+		// background-color: $orange;
+		// color: $black;
 		position: relative;
 	}
 }
@@ -354,16 +394,26 @@ a.logo-large {
 		padding: 0 30px;
 	}
 	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
-		background-color: #c3c7c5;
-		width: 24.5%;
-		float: right;
+		//background-color: #c3c7c5;
+		width: auto;
+		//float: right;
 		margin: 0 0 0 2px;
 		padding: 0;
 		height: auto;
+		position: absolute;
+		top: 0;
+		right: 0;		
 	}
 	@media (min-width: em(1152)) { /* Changed to fix issue with tablets, original value 1024 */
 		margin: 0;
-		width: 20%;
+		//width: 20%;
+	}
+
+	#search-block-form {
+		display: block;
+		@media (min-width: em(1024)) {
+			display: none;
+		}
 	}
 }
 .block-search input[type=text],
@@ -387,9 +437,10 @@ a.logo-large {
 	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
 		background-color: #c3c7c5;
 		height: 45px;
+		width: auto;
 	}
 	&:focus {
-		outline: none !important;
+		//outline: none !important;
 	    background: $white;
 	}
 }
@@ -402,14 +453,15 @@ a.logo-large {
 	margin: em(14) 0 0 8%;
 	font-size: em(14);
 }
-.block-search input[type="submit"]	 {
+.block-search input[type="submit"],
+.block-search #search-toggle {
 	text-indent: -9000px;
 	float: right;
-	display: block;
+	//display: block;
 	width: 25%;
 	margin-left: -1px;
 	margin-bottom: 0;
-	background: url("../images/sprites/ui/ui-icon-sprites.png") no-repeat;
+	background: rgba(0, 0, 0, 0) url("../images/sprites/ui/ui-icon-sprites.png") no-repeat;
 	&:hover {
 		cursor: pointer;
 	}
@@ -424,6 +476,7 @@ a.logo-large {
 	}
 	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
 		height: 45px;
+		width: 45px;
 		background-color: #c3c7c5;
 		background-position: 50% 12px;
 		border: 0;
@@ -433,6 +486,18 @@ a.logo-large {
 		}
 	}
 }
+.block-search input[type="submit"]	 {
+	display: block;
+	@media (min-width: em(1024)) {
+		display: none;
+	}
+}
+.block-search #search-toggle {
+	display: none;
+	@media (min-width: em(1024)) {
+		display: block;
+	}
+}	
 /* Main Menu - Section
 *********************************/
 .front {
@@ -446,7 +511,7 @@ a.logo-large {
 }
 #menu-main, #menu-utility {
 	ul.menu > li {
-		a.mobile-menu-toggle {
+		.mobile-menu-toggle {
 			@media (min-width: em(320)) {
 				display: block;
 				cursor: pointer;
@@ -456,7 +521,7 @@ a.logo-large {
 				padding: 0;
 				top: 0;
 				right: 0;
-				background: url(../images/sprites/ui/ui-arrows-sprites.png) no-repeat;
+				background: rgba(0, 0, 0, 0) url(../images/sprites/ui/ui-arrows-sprites.png) no-repeat;
 				background-position: 15px -745px;
 				border-bottom: 0;
 				&:hover {
@@ -515,19 +580,20 @@ a.logo-large {
 			}
 		}
 		@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
-			float: right;
+			//float: right;
+			margin-left: 90px;
 			> li {
 				display: inline-block;
 				line-height: em(55);
 				float: left;
-				border-left: 1px solid $darkPurple;
+				border-right: 1px solid $darkPurple;
 				border-bottom: 0;
 				&:last-child, &.last {
 					border-right: 1px solid $darkPurple;
 				}
 				&.expanded > a {
 					padding: 0 25px 0 10px;
-					background: url("../images/sprites/ui/ui-arrows-sprites.png") no-repeat;
+					background: rgba(0, 0, 0, 0) url("../images/sprites/ui/ui-arrows-sprites.png") no-repeat;
 					background-position: 97% -130px;
 				}
 				&.expanded { /* Add a special rule to eliminate sprite arrows on sub-navigation items */
@@ -549,16 +615,23 @@ a.logo-large {
 					background-color: #fff;
 					color: $darkGray;
 				}
+				&:last-of-type {
+					float: right;
+					border-right: none;
+				}
 			}
 		}
 		@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 1024 */
 			> li.expanded > a {
-				padding: 0 34px 0 15px;
+				padding: 0 39px 0 30px;
 			}
 			> li a {
 				font-size: em(12);
-				padding: 0 15px;
+				padding: 0 30px;
 			}
+		}
+		@media (min-width: em(1152)) { 
+			margin-left: 120px;
 		}
 	}
 	ul.menu li:hover.dropdown ul.menu{
@@ -584,10 +657,10 @@ a.logo-large {
 			background-color: #9b6e35;
 		}
 	}
-	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 768 */
-		display: none;
-	}
-	@media (min-width: em(1152)) { /* Changed to fix issue with tablets, original value 1024 */
+	// @media (min-width: em(1024)) {  Changed to fix issue with tablets, original value 768 
+	// 	display: none;
+	// }
+	@media (min-width: em(1024)) { /* Changed to fix issue with tablets, original value 1024 */
 		display: block;
 		background-color: $orange;
 		color: $black;
@@ -616,10 +689,11 @@ a.logo-large {
 		min-width: 320px;
 		padding: 10px 20px 50px 20px;
 		background-color: $lightGray;
+		margin-left: 0px;
 	}
 	> li {
 		float: none;
-		border-left: 0;
+		border-right: 0;
 		line-height: em(22);
 		display: block;
 		text-align: left;
