--- a/web/themes/custom/leap/templates/layout/page.html.twig
+++ b/web/themes/custom/leap/templates/layout/page.html.twig
@@ -32,7 +32,8 @@
   <div id="mobile-nav">
       <a href="https://www.fi.edu" class="logo-small" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}" aria-label="{{ 'The Franklin Institute logo'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
     <ul class="nav-control">
-      <li><a href="https://www.fi.edu/interactive-map" class="map-btn" title="Open Map">Map</a></li>
+      <li><a href="https://tickets.fi.edu" class="buy-tickets" target="_blank">Buy Tickets</a></li>
+      <!-- HIDE li><a href="/interactive-map" class="map-btn" title="Open Map">Map</a></li-->
       <li><a href="javascript:;" class="menu-btn" title="Open Menu">Menu</a></li>
     </ul>
   </div>
