--- a/web/themes/custom/leap/templates/layout/page.html.twig
+++ b/web/themes/custom/leap/templates/layout/page.html.twig
@@ -13,7 +13,9 @@
     <nav id="menu-utility" class="clearfix" role="navigation">
       <div class="container">
         <a href="https://www.fi.edu" class="logo-large" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}" aria-label="{{ 'The Franklin Institute logo'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
-        {{ page.utility_nav }}
+        <div class="utility-wrapper">
+          {{ page.utility_nav }}
+        </div>
       </div>
     </nav>
   {% endif %}
