--- a/web/themes/custom/leap/templates/field/field--node--body--page.html.twig
+++ b/web/themes/custom/leap/templates/field/field--node--body--page.html.twig
@@ -9,6 +9,7 @@
 
 {% set attributes = attributes.addClass('intro-text') %}
 
+<div class="main-page-content">
 {% if label_hidden %}
   {% if multiple %}
     <div{{ attributes }}>
@@ -35,3 +36,4 @@
     {% endif %}
   </div>
 {% endif %}
+</div>
