--- a/web/themes/custom/leap/templates/node--basic-page.html.twig
+++ b/web/themes/custom/leap/templates/node--basic-page.html.twig
@@ -74,7 +74,7 @@
 #}
 
 {% set classes = 'basic-page' %}
-<article{{ attributes.addClass(classes) }} class="basic-page">
+<article{{ attributes.addClass(classes) }}>
 
   <div class="intro-paragraph">
     <h2>{{ content.field_intro_title[0] }}</h2>
