--- a/web/themes/custom/leap/templates/field/field--node--webform.html.twig
+++ b/web/themes/custom/leap/templates/field/field--node--webform.html.twig
@@ -37,7 +37,7 @@
  */
 #}
 
-<div class="webform">
+<div class="webform main-page-content">
 {% if label_hidden %}
   {% if multiple %}
     <div{{ attributes }}>
