SiS theme tweaks

--- a/web/themes/custom/sis/sass/overrides.sass
+++ b/web/themes/custom/sis/sass/overrides.sass
@@ -60,3 +60,10 @@ nav.nav-site-main .menu li:last-child:hover
 
 .faq-accordion .views-field-field-faq ul li .faq-heading:hover:before
   border-color: transparent $brand transparent transparent
+
+
+
+.block-gsk-banner
+  img
+    width: auto
+    margin: 0 auto
