--- a/web/themes/custom/sis/css/overrides.css
+++ b/web/themes/custom/sis/css/overrides.css
@@ -54,4 +54,8 @@ nav.nav-site-main .menu li:last-child:hover {
 .faq-accordion .views-field-field-faq ul li .faq-heading:hover:before {
   border-color: transparent #f36633 transparent transparent; }
 
+.block-gsk-banner img {
+  width: auto;
+  margin: 0 auto; }
+
 /*# sourceMappingURL=overrides.css.map */
