--- a/web/themes/custom/sis/sass/overrides.sass
+++ b/web/themes/custom/sis/sass/overrides.sass
@@ -64,6 +64,8 @@ nav.nav-site-main .menu li:last-child:hover
 
 
 .block-gsk-banner
+  clear: both
+  margin-top: 60px
   img
     width: auto
     margin: 0 auto
