Added text blurb to homepage video block

--- a/web/themes/custom/sis/templates/block--sis-backgroundvideo.html.twig
+++ b/web/themes/custom/sis/templates/block--sis-backgroundvideo.html.twig
@@ -4,13 +4,10 @@
 	<div class="video-info">
 
 		<div class="video-title">
-			<h2>Science in the Summer</h2>
+			<h2>GSK Science in the Summer&trade;</h2>
 		</div>
 		<div class="video-description">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam egestas nunc eget quam eleifend mollis. Nunc a porta neque.</p>
-		</div>
-		<div class="video-link action-link big">
-			<a href="/join-us">Learn more</a>
+			<p>GSK Science in the Summer&trade; is a fun and free science education program for students entering grades 2 to 6!</p>
 		</div>
 	</div>
 
