--- a/web/themes/custom/leap/sass/components/_form.scss
+++ b/web/themes/custom/leap/sass/components/_form.scss
@@ -43,7 +43,7 @@
       color: #4D5263;
     }
 
-		input, textarea {
+		input, textarea, select {
       background-color: transparent;
       width: 100%;
       max-width: 100%;
