--- a/web/themes/custom/leap/css/legacy.css
+++ b/web/themes/custom/leap/css/legacy.css
@@ -413,7 +413,8 @@ input[type=text],
 input[type=password],
 input[type=email],
 input[type=tel],
-textarea {
+textarea,
+select {
   font-family: 'Gotham SSm A', 'Gotham SSm B';
   padding: 12px 15px;
   color: #404040;
@@ -426,7 +427,8 @@ textarea {
     input[type=password],
     input[type=email],
     input[type=tel],
-    textarea {
+    textarea,
+    select {
       width: 95%; } }
 
 input[type=text],
