--- a/web/themes/custom/sis/sass/overrides.sass
+++ b/web/themes/custom/sis/sass/overrides.sass
@@ -69,3 +69,41 @@ nav.nav-site-main .menu li:last-child:hover
   img
     width: auto
     margin: 0 auto
+
+
+// Title image
+.main-page-heading
+  text-align: center
+img.title-image
+  width: auto
+
+// Main nav bar
+nav.nav-site-main
+  background-color: $brand
+  @media (min-width: 31.25em)
+    margin-bottom: 50px
+  .menu
+    margin-bottom: 0
+    li 
+      padding-top: 8px
+      padding-bottom: 10px
+      a 
+        color: #fff
+    li:last-child
+      background-color: darken($brand, 20%)
+      li
+        padding-bottom: 10px
+      @media (min-width: 34.375em)
+        top: 5px
+        padding-top: 0px
+        a.sub-menu
+          padding-top: 6px
+
+
+// @media (min-width: 34.375em)
+//   nav.nav-site-main
+//     li:last-child
+//       top: 7px
+//       padding-top: 0px
+//       a.sub-menu
+//         padding-top: 6px
