--- a/web/themes/custom/sis/sass/overrides.sass
+++ b/web/themes/custom/sis/sass/overrides.sass
@@ -74,8 +74,13 @@ nav.nav-site-main .menu li:last-child:hover
 // Title image
 .main-page-heading
   text-align: center
+  h1
+    font-family: 'Gotham SSm 4r', 'Gotham SSm A', 'Gotham SSm B',Helvetica,Arial,sans-serif
+    a 
+      color: $brand
 img.title-image
   width: auto
+
 
 // Main nav bar
 nav.nav-site-main
