--- a/web/themes/custom/sis/sass/overrides.sass
+++ b/web/themes/custom/sis/sass/overrides.sass
@@ -105,10 +105,5 @@ nav.nav-site-main
           padding-top: 6px
 
 
-// @media (min-width: 34.375em)
-//   nav.nav-site-main
-//     li:last-child
-//       top: 7px
-//       padding-top: 0px
-//       a.sub-menu
-//         padding-top: 6px
+.block-resources strong
+  font-weight: inherit
