--- a/web/themes/custom/sis/css/overrides.css
+++ b/web/themes/custom/sis/css/overrides.css
@@ -94,4 +94,7 @@ nav.nav-site-main {
           nav.nav-site-main .menu li:last-child a.sub-menu {
             padding-top: 6px; } }
 
+.block-resources strong {
+  font-weight: inherit; }
+
 /*# sourceMappingURL=overrides.css.map */
