Another CSS tweak; test next time!

--- a/web/themes/custom/sis/css/overrides.css
+++ b/web/themes/custom/sis/css/overrides.css
@@ -95,6 +95,6 @@ nav.nav-site-main {
             padding-top: 6px; } }
 
 .block-resources strong {
-  font-weight: inherit; }
+  font-weight: 700; }
 
 /*# sourceMappingURL=overrides.css.map */
