--- a/web/themes/custom/sis/templates/block--sis-backgroundvideo.html.twig
+++ b/web/themes/custom/sis/templates/block--sis-backgroundvideo.html.twig
@@ -7,7 +7,7 @@
 			<h2>GSK Science in the Summer&trade;</h2>
 		</div>
 		<div class="video-description">
-			<p>GSK Science in the Summer&trade; is a fun and free science education program for students entering grades 2 to 6!</p>
+			<p>GSK Science in the Summer&trade; is a free summer science education program that aims to inspire the next generation of scientists and engineers.</p>
 		</div>
 	</div>
 
