--- a/web/themes/custom/leap/sass/components/_faq.scss
+++ b/web/themes/custom/leap/sass/components/_faq.scss
@@ -132,18 +132,35 @@
           height:auto;
           transform-origin:top;
           transition: max-height 0.3s ease-out;
-
-
-
-          p{
+          .faq-padding {
             padding: 20px 45px;
-            color: $purple;
+            //color: $purple;
+            color: #707D7A;
             line-height: em(27);
             font-family: "Gotham SSm 4r", "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
             font-weight: 400;
             font-size: .875em;
-            line-height: 1.75em;
-            color: #707D7A;
+          }
+          p {
+            // line-height: 1.75em;
+            // color: #707D7A;
+          }
+          ul, ol {
+            margin-bottom: 25px;
+            margin-left: 2em;
+            //color: $purple;
+          }
+          ul {
+            list-style-type: disc;
+              ul {
+                list-style-type: circle;
+              }
+          }
+          ol {
+            list-style: decimal;
+          }
+          a:hover {
+            text-decoration: underline;
           }
         }
         .faq-wrapper {
