--- a/web/themes/custom/leap/sass/components/_table-list.scss
+++ b/web/themes/custom/leap/sass/components/_table-list.scss
@@ -14,7 +14,7 @@
 		font-style: italic;
 		font-weight: 400;
 		max-width: 95%;
-	    text-transform: capitalize;
+	    //text-transform: capitalize;
 	    color: #272727;
 	    display: inline-block;
 	    border-radius: 0;
