--- a/web/themes/custom/leap/templates/paragraph/paragraph--faq.html.twig
+++ b/web/themes/custom/leap/templates/paragraph/paragraph--faq.html.twig
@@ -54,7 +54,7 @@
     </div>
     <div class="faq-answer body">
       <div class="faq-padding">
-        {{ content.field_answer }}
+        {{ content.field_answer[0] }}
       </div>
     </div>
   </div>
