--- a/web/themes/custom/leap/css/style.css
+++ b/web/themes/custom/leap/css/style.css
@@ -931,9 +931,18 @@ iframe {
         height: auto;
         transform-origin: top;
         transition: max-height 0.3s ease-out; }
-        .faq-accordion .views-field-field-faq ul li .faq-answer .faq-padding,
-        .faq-accordion .views-field-field-faqs ul li .faq-answer .faq-padding {
-          padding: 20px 45px;
+        .faq-accordion .views-field-field-faq ul li .faq-answer *:first-child,
+        .faq-accordion .views-field-field-faqs ul li .faq-answer *:first-child {
+          padding-top: 25px; }
+        .faq-accordion .views-field-field-faq ul li .faq-answer *:last-child,
+        .faq-accordion .views-field-field-faqs ul li .faq-answer *:last-child {
+          padding-bottom: 25px; }
+        .faq-accordion .views-field-field-faq ul li .faq-answer p, .faq-accordion .views-field-field-faq ul li .faq-answer ul, .faq-accordion .views-field-field-faq ul li .faq-answer ol,
+        .faq-accordion .views-field-field-faqs ul li .faq-answer p,
+        .faq-accordion .views-field-field-faqs ul li .faq-answer ul,
+        .faq-accordion .views-field-field-faqs ul li .faq-answer ol {
+          padding-left: 45px;
+          padding-right: 45px;
           color: #707D7A;
           line-height: 1.6875em;
           font-family: "Gotham SSm 4r", "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
@@ -1431,6 +1440,8 @@ div.video-background .action-link a {
     list-style-type: circle; }
 .basic-page ol {
   list-style: decimal; }
+.basic-page a:hover {
+  text-decoration: underline; }
 
 .resouces-file {
   background-color: #f4f4f4;
