--- a/web/themes/custom/sis/css/overrides.css
+++ b/web/themes/custom/sis/css/overrides.css
@@ -97,4 +97,11 @@ nav.nav-site-main {
 .block-resources strong {
   font-weight: 700; }
 
+.main-page-content .intro-text p {
+  max-width: 100%;
+  margin-bottom: 50px; }
+
+div.video-background .video-info .video-description p {
+  line-height: 1.25em; }
+
 /*# sourceMappingURL=overrides.css.map */
