Adjusted main nav on mobile

--- a/web/themes/custom/sis/sass/overrides.sass
+++ b/web/themes/custom/sis/sass/overrides.sass
@@ -85,6 +85,7 @@ img.title-image
 // Main nav bar
 nav.nav-site-main
   background-color: $brand
+  margin-bottom: 50px
   @media (min-width: 31.25em)
     margin-bottom: 50px
   .menu
@@ -96,11 +97,14 @@ nav.nav-site-main
         color: #fff
     li:last-child
       background-color: darken($brand, 20%)
+      margin-top: 10px
+      padding-top: 0px
       li
         padding-bottom: 10px
       @media (min-width: 34.375em)
         top: 5px
-        padding-top: 0px
+        margin-top: 0px
+        //padding-top: 0px
         a.sub-menu
           padding-top: 6px
 
