--- a/web/themes/custom/sis/css/overrides.css
+++ b/web/themes/custom/sis/css/overrides.css
@@ -72,7 +72,8 @@ img.title-image {
   width: auto; }
 
 nav.nav-site-main {
-  background-color: #f36633; }
+  background-color: #f36633;
+  margin-bottom: 50px; }
   @media (min-width: 31.25em) {
     nav.nav-site-main {
       margin-bottom: 50px; } }
@@ -84,13 +85,15 @@ nav.nav-site-main {
       nav.nav-site-main .menu li a {
         color: #fff; }
     nav.nav-site-main .menu li:last-child {
-      background-color: #b5380b; }
+      background-color: #b5380b;
+      margin-top: 10px;
+      padding-top: 0px; }
       nav.nav-site-main .menu li:last-child li {
         padding-bottom: 10px; }
       @media (min-width: 34.375em) {
         nav.nav-site-main .menu li:last-child {
           top: 5px;
-          padding-top: 0px; }
+          margin-top: 0px; }
           nav.nav-site-main .menu li:last-child a.sub-menu {
             padding-top: 6px; } }
 
